# claude-switcher

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/: settings.yml
.github/workflows/: build.yml
scripts/: tauri.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs  types.rs
src-tauri/src/api/: mod.rs  usage.rs
src-tauri/src/auth/: fs_utils.rs  mod.rs  oauth_server.rs  settings.rs  storage.rs  switcher.rs  token_refresh.rs
src-tauri/src/commands/: account.rs  mod.rs  oauth.rs  process.rs  usage.rs
src/components/: AccountCard.tsx  AddAccountModal.tsx  MissedScheduledWarmupModal.tsx  ScheduledWarmupsModal.tsx  UsageBar.tsx  index.ts
src/hooks/: useAccounts.ts
src/types/: index.ts
